# abyss

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
include/: functional.h  index.h  operators.h  optimizers.h  scalartype.h  tensor.h  types.h
include/autograd/: function.h  graph.h
include/core/: CMakeLists.txt  allocator.h  array.h  dispatcher.h  dtype.h  iterator.h  ndarray.h  traits.h  utility.h  visitor.h
include/nn/: activation.h  losses.h  module.h
include/utils/: data.h
src/: functional.cc  operators.cc  optimizers.cc  scalartype.cc  tensor.cc  types.cc
src/autograd/: functors.h  graph.cc
src/backend/: CMakeLists.txt  amath.h  arithmetics.h  comparison.h  matmul.h  reduction.h
src/backend/native/: amath.cc  arithmetics.cc  comparison.cc  matmul.cc  reduction.cc
src/nn/: activation.cc  losses.cc  module.cc
src/ops/: CMakeLists.txt  conversion_ops.h  dispatcher.h  dtype_ops.cc  dtype_ops.h  matrix_ops.cc  matrix_ops.h  merge_ops.cc  merge_ops.h  util_ops.cc  util_ops.h  vector_ops.cc  vector_ops.h
src/utils/: data.cc
tests/: CMakeLists.txt  test_array.cc  test_functional.cc  test_main.cc  test_ndarray.cc  test_tensor.cc  test_utility.cc
tests/autograd/: CMakeLists.txt  test_graph.cc
tests/backend/native/: CMakeLists.txt  test_native_arithmetics.cc  test_native_matmul.cc
tests/nn/: CMakeLists.txt  test_losses.cc
tests/ops/: CMakeLists.txt  test_arith_ops.cc  test_matrix_ops.cc
